--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap"
       rel="stylesheet"
     />
-    <script src="./assets/script.js" defer></script>
   </head>
   <body>
     <header class="container">
@@ -27,24 +26,18 @@
     <main>
       <div id="banner">
         <img
-          class="banner-img"
+          class="banner-img tagline"
           src="./assets/images/slideshow/slide1.jpg"
           alt="Banner Print-it"
         />
         <div class="arrow">
-          <img
-            id="leftArrow"
-            class="arrow_left"
-            src="./assets/images/arrow_left.png"
-          />
-          <img
-            id="rightArrow"
-            class="arrow_right"
-            src="./assets/images/arrow_right.png"
-          />
+          <img class="arrow_left" src="./assets/images/arrow_left.png" />
+          <img class="arrow_right" src="./assets/images/arrow_right.png" />
         </div>
         <p>Impressions tous formats <span>en boutique et en ligne</span></p>
-        <div class="dots"></div>
+        <div id="dotsContainer" class="dots">
+          <ul id="sliderDots"></ul>
+        </div>
       </div>
       <section id="about-us" class="container">
         <div>
